<resources>
    <string name="app_name">Garbo</string>
    <string name="welcome">"Selamat datang!"</string>
    <string name="logo">Garbo logo</string>

    <string name="invalid_username">Username tidak valid</string>
    <string name="invalid_email">Format email salah!</string>
    <string name="invalid_password">Password harus >5 karakter</string>

    <string name="title_activity_login">Login</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_out">Logout</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="message_login_page">Belum daftar? Klik di bawah ini</string>
    <string name="login_failed">"Login failed"</string>
    <string name="successful_login">Anda berhasil Login!!</string>

    <string name="error_empty_password">Isi password terlebih dahulu!</string>
    <string name="error_empty_email">Isi email terlebih dahulu!</string>
    <string name="error_empty_username">Isi username terlebih dahulu!</string>
    <string name="error_empty_name">Isi nama terlebih dahulu!</string>

    <string name="action_sign_up">Register</string>
    <string name="title_register_activity">Register</string>
    <string name="message_register_page">Sudah daftar? Klik di sini untuk masuk</string>
    <string name="successful_register">Akun anda berhasil didaftarkan!!</string>

    <string name="title_home">Home</string>
    <string name="title_upload">Upload</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="title_mission">Mission</string>
    <string name="title_store">Store</string>
    <string name="title_points">Points</string>
    <string name="title_more">More</string>
    <string name="title_camera">Kamera</string>
    <string name="title_gallery">Galeri</string>

    <string name="title_quick_menu">Menu Cepat</string>
    <string name="title_latest_history">Riwayat Terakhir</string>
    <string name="cd_quick_menu_item">quick menu item</string>
    <string name="current_val">10</string>
    <string name="view_more">Lihat selengkapnya</string>
    <string name="your_points">Poinmu</string>

    <string name="item_image_desc">history item photo</string>
    <string name="history_category">Category</string>
    <string name="history_date">Datetime</string>

    <string name="camera_preview">Camera Preview</string>
    <string name="invalid_choose_image">Tidak ada gambar yang dipilih</string>
    <string name="empty_image_warning">Masukkan gambar terlebih dahulu!</string>
    <string name="successful_upload">File berhasil diupload!!</string>
    <string name="permission_not_granted">Akses Ditolak!!</string>
    <string name="unsupported_features">Fitur Belum Tersedia</string>
</resources>