<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/points_container_background"
    android:padding="16dp"
    android:orientation="horizontal"
    android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_points_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textAlignment="textEnd"
            android:text="@string/title_points"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/tv_points_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="textStart"
            android:text="@string/current_val"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <ImageView
            android:id="@+id/iv_mission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_milestone_24"
            android:contentDescription="@string/title_mission"
            android:layout_marginEnd="16dp" />

        <ImageView
            android:id="@+id/iv_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_shop_24"
            android:contentDescription="@string/title_store" />
    </LinearLayout>